# palantir

./: .gitignore  Cargo.toml  make.bat
master/: Cargo.toml  flash.uf2
master/.cargo/: config
master/src/: bus.rs  main.rs
palantir/: .gitignore  Cargo.toml
palantir-transport/: Cargo.toml
palantir/src/: common.rs  feather_bus.rs  lib.rs  messages.rs  parser.rs  transport.rs
slave/: .gdbinit  .gitignore  Cargo.toml
slave/src/: main.rs
src/: lib.rs  messages.rs
