[package]
name = "palantir"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "~0.11", default-features = false }
rs485-transport = { git = "https://github.com/PinballWizards/rs485-transport.git", branch = "master" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
