[package]
name = "palantir-master"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palantir = { path = "../palantir" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
