[package]
name = "palantir-master"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Standard deps
panic-halt = "~0.2"
cortex-m = "~0.6"
cortex-m-semihosting = "~0.3"
cortex-m-rtfm = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"
feather_m0 = { version = "~0.6", features = ["unproven"] }

palantir = { path = "../palantir", features = ["feather_bus"], default-features = false }
