[package]
name = "palantir"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.feather_m0]
version = "~0.6"
features = ["unproven"]
optional = true

[dependencies.embedded-hal]
version = "~0.2"
optional = true

[dependencies]
bitfield = "~0.13"
heapless = "~0.5.2"
nom = { version = "~5.1", default-features = false }
crc = { version = "~1.8.1", default-features = false }
nb = "~0.1"

[features]
feather_bus = ["feather_m0", "embedded-hal"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
